10/12/2015

The first version 0.99.0 is submitted to Bioconductor