@@ -1,8 +1,8 @@
 Package: SC3
 Type: Package
 Title: Single-Cell Consensus Clustering
-Version: 0.99.24
-Date: 2016-03-01
+Version: 0.99.25
+Date: 2016-03-02
 Authors@R: person("Vladimir", "Kiselev", email = "vladimir.yu.kiselev@gmail.com", role = c("aut", "cre"))
 Description: Interactive tool for clustering and analysis of single cell RNA-Seq data.
 License: GPL-3
